# newsbuilder

./: .env.example  .gitignore  .replit  DEPLOYMENT_INSTRUCTIONS.md  GITHUB_READY.md  QUICKSTART.md  README.md  ai_summarizer.py  app.py  app_new.py  article_scraper.py  audio_processor.py  bookmark_manager.py  database.py  dependencies.txt  deploy.sh  install-local.sh  install-requirements.txt  install.sh  package.sh  pyproject.toml  replit.md  rss_manager.py  rss_reader.db  start.sh  stop.sh  svg_icons.py
data/: rss_reader.db
